force-app/main/default/objects/Genesys_Reporting__c/Genesys_Reporting__c.object-meta.xml
<CustomObject>
    <label>Genesys Reporting</label>
    <nameField>
        <displayFormat>G-{0000}</displayFormat>
        <label>Genesys Reporting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Genesys Reportings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>