force-app/main/default/objects/Genesys_Reporting__c/fields/cti_SFDCCaseRefNo__c.field-meta.xml
<CustomField>
    <fullName>cti_SFDCCaseRefNo__c</fullName>
    <label>cti_SFDCCaseRefNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>