force-app/main/default/objects/Genesys_Reporting__c/fields/SFDCAcctID__c.field-meta.xml
<CustomField>
    <fullName>SFDCAcctID__c</fullName>
    <label>SFDCAcctID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>