force-app/main/default/objects/Genesys_Reporting__c/fields/SFDCAcctLocation__c.field-meta.xml
<CustomField>
    <fullName>SFDCAcctLocation__c</fullName>
    <label>SFDCAcctLocation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>