force-app/main/default/objects/Genesys_Reporting__c/fields/SFDCAcctSegment__c.field-meta.xml
<CustomField>
    <fullName>SFDCAcctSegment__c</fullName>
    <label>SFDCAcctSegment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>