force-app/main/default/objects/Genesys_Reporting__c/fields/SFDCCaseSubType__c.field-meta.xml
<CustomField>
    <fullName>SFDCCaseSubType__c</fullName>
    <label>SFDCCaseSubType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>