force-app/main/default/objects/Genesys_Reporting__c/fields/SFDCCaseType__c.field-meta.xml
<CustomField>
    <fullName>SFDCCaseType__c</fullName>
    <label>SFDCCaseType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>