force-app/main/default/objects/Genesys_Reporting__c/fields/SFDCObjRecord_Id__c.field-meta.xml
<CustomField>
    <fullName>SFDCObjRecord_Id__c</fullName>
    <label>SFDCObjRecord Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>